# django

./: .env  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
apps/auto_parks/: serializers.py  urls.py
apps/cars/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/: managers.py  serializers.py  urls.py
backend/: manage.py
backend/apps/auth/: urls.py  views.py
backend/apps/auto_parks/: models.py  serializers.py  urls.py  views.py
backend/apps/auto_parks/migrations/: 0001_initial.py
backend/apps/cars/: choises.py  filters.py  serializers.py  urls.py  views.py
backend/apps/cars/migrations/: 0003_carmodel_created_at_carmodel_updated_at.py  (+5 more)
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/configs/: celery.py  settings.py  urls.py
backend/configs/extra_conf/: __init__.py  drf_yasg_conf.py  rest_conf.py
backend/core/: pagination.py  permissions.py
backend/core/dataclasses/: user_dataclass.py
backend/core/enums/: action_token_enum.py  regex_enum.py
backend/core/handlers/: error_handler.py
backend/core/services/: email_service.py  jwt_service.py  upload_avatar.py
backend/templates/: recovery.html  register.html  spam.html
cars/: models.py  views.py
cars/migrations/: 0001_initial.py  0002_alter_carmodel_table.py
client/: asset-manifest.json  index.html
client/static/js/: main.ae21a87f.js  main.ae21a87f.js.map
configs/: settings.py  urls.py
configs/extra_conf/: jwt_conf.py  rest_conf.py
core/: permissions.py
frontend/: package-lock.json
frontend/src/: App.js
(+7 files in other folders)
